@@ -9,6 +9,7 @@ end
 
 request_dir = '/var/www/requests'
 socket_dir = '/var/www/sockets'
+nonroot_dir = '/var/www/request-error-data'
 unicorn_log_dir = '/var/log/unicorn'
 nginx_log_dir = "/var/log/nginx"
 rc_unicorn_file = '/etc/rc.d/rc.unicorn'
@@ -35,7 +36,15 @@ unless File.directory?(request_dir)
   File.chown(root_id, daemon_id, request_dir)
 end
 
-# Setup sockets directory to hold PostgreSQL database connection sockets
+# Setup requests directory to hold per-request information for crash notifications
+unless File.directory?(nonroot_dir)
+  puts "Creating #{nonroot_dir}"
+  Dir.mkdir(nonroot_dir)
+  File.chmod(0710, nonroot_dir)
+  File.chown(root_id, unicorn_group_id, nonroot_dir)
+end
+
+# Setup sockets directory to hold nginx connection sockets
 unless File.directory?(socket_dir)
   puts "Creating #{socket_dir}"
   Dir.mkdir(socket_dir)
